# AutoTestFramework

./: .gitignore  README.md  config.yaml  conftest.py  pyproject.toml  requirements.txt  test_simple.py  ui_fears_list_test.py
core/: __init__.py  browser.py  context.py  locator.py  page.py  selector.py  settings.py
pages/: fear_list_page.py  page_object.py
steps/: __init__.py  conftest.py  fears_list_steps.py  open_steps.py
